# ProjectBunny

./: .gitignore  CMakeLists.txt  StereovisionHacks.sln  build_config.json
cmake/: CompilerOptions.cmake
docs/: dx12-mod-support-plan.md
scripts/: build-cmake.ps1
src/Core/: CMakeLists.txt  MigotoCommandList.cpp  MigotoCommandList.h  MigotoResource.cpp  MigotoResource.h  MigotoShaderOverride.cpp  MigotoShaderOverride.h  MigotoTextureOverride.cpp  MigotoTextureOverride.h
src/DirectX11/: DirectX11.rc
src/DirectX12/: CMakeLists.txt  D3D12Wrapper.cpp  DX12BindingTracker.cpp  DX12BindingTracker.h  DX12CommandListHooks.cpp  DX12FrameAnalysis.cpp  DX12FrameAnalysis.h  DX12FrameAnalysisManifest.cpp  DX12FrameAnalysisManifest.h  DX12Input.cpp  DX12Json.cpp  DX12Json.h  DX12ModRuntime.cpp  DX12ModRuntime.h  DX12Overlay.cpp  DX12Overlay.h  DX12ResourceDump.cpp  DX12ResourceTracker.cpp  DX12ResourceTracker.h  DX12ShaderDump.cpp  DX12ShaderHunt.cpp  DX12ShaderHunt.h  DX12State.cpp  DX12State.h  DXGIHooks.cpp  DXGIHooks.h
src/DirectXGI/: CMakeLists.txt
tools/wine-dll-redirect/: Makefile  README.md  wine_dll_redirect.c
zaychik/: __init__.py
zaychik/common/: config.py  properties.py
zaychik/ui/: operators.py  panel.py
zaychik/utils/: formats.py  importer.py  layouts.py  parser.py  paths.py  trace.py
